Fixed the keyframes for arrows so they look less glitcy/jumpy

--- a/main.css
+++ b/main.css
@@ -163,20 +163,20 @@ nav li:nth-child(5) {
 
 @keyframes point {
     0% {
-        transform: translateX(-3px);
-    }
-    25% {
         transform: translateX(3px);
     }
-    30% {
+    35% {
         transform: translateX(-3px);
     }
     60% {
         transform: translateX(3px);
     }
+    80% {
+        transform: translateX(-3px);
+    }
 
     100% {
-        transform: translateX(-3px);
+        transform: translateX(3px);
     }
 
 }
